# tigen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs  package_manager.rs
templates/: Dockerfile
