[package]
name = "tigen"
version = "0.1.0"
authors = ["Maximilien DI DIO <mdidio+dev@pm.me>"]
edition = "2021"
license = "MIT"
keywords = ["docker", "podman", "toolbox", "oci", "container"]
description = "Toolbox image builder (tigen) is a simple utility to create oci images to for creating [toolbox](https://github.com/containers/toolbox) sessions."
repository = "https://github.com/prx0/tigen.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ['derive'] }
tera = "1.17.1"

[[bin]]
name = "tigen"
path = "src/main.rs"